// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dashboard rendered visibility by role > snapshots assigned and unassigned dashboards at level 2 1`] = `
{
  "assigned": {
    "amPrep": false,
    "closing": true,
    "myShift": true,
    "safetyLine": false,
    "tiles": [],
  },
  "unassigned": {
    "amPrep": false,
    "closing": true,
    "myShift": true,
    "safetyLine": false,
    "tiles": [],
  },
}
`;

exports[`dashboard rendered visibility by role > snapshots assigned and unassigned dashboards at level 3 1`] = `
{
  "assigned": {
    "amPrep": true,
    "closing": true,
    "myShift": true,
    "safetyLine": false,
    "tiles": [
      "opening_report",
      "mid_day_prep",
    ],
  },
  "unassigned": {
    "amPrep": false,
    "closing": true,
    "myShift": true,
    "safetyLine": false,
    "tiles": [],
  },
}
`;

exports[`dashboard rendered visibility by role > snapshots assigned and unassigned dashboards at level 4 1`] = `
{
  "assigned": {
    "amPrep": true,
    "closing": true,
    "myShift": true,
    "safetyLine": false,
    "tiles": [
      "opening_report",
      "mid_day_prep",
      "receiving",
      "ordering",
      "counts",
      "cash_report",
      "pm_report",
    ],
  },
  "unassigned": {
    "amPrep": false,
    "closing": true,
    "myShift": true,
    "safetyLine": true,
    "tiles": [],
  },
}
`;

exports[`dashboard rendered visibility by role > snapshots assigned and unassigned dashboards at level 5 1`] = `
{
  "assigned": {
    "amPrep": true,
    "closing": true,
    "myShift": true,
    "safetyLine": false,
    "tiles": [
      "opening_report",
      "mid_day_prep",
      "receiving",
      "ordering",
      "counts",
      "cash_report",
      "pm_report",
    ],
  },
  "unassigned": {
    "amPrep": false,
    "closing": true,
    "myShift": true,
    "safetyLine": true,
    "tiles": [],
  },
}
`;

exports[`dashboard rendered visibility by role > snapshots assigned and unassigned dashboards at level 6 1`] = `
{
  "assigned": {
    "amPrep": true,
    "closing": true,
    "myShift": true,
    "safetyLine": false,
    "tiles": [
      "opening_report",
      "mid_day_prep",
      "receiving",
      "ordering",
      "counts",
      "cash_report",
      "pm_report",
    ],
  },
  "unassigned": {
    "amPrep": false,
    "closing": true,
    "myShift": true,
    "safetyLine": true,
    "tiles": [],
  },
}
`;

exports[`dashboard rendered visibility by role > snapshots assigned and unassigned dashboards at level 7 1`] = `
{
  "assigned": {
    "amPrep": true,
    "closing": true,
    "myShift": true,
    "safetyLine": false,
    "tiles": [
      "opening_report",
      "mid_day_prep",
      "receiving",
      "ordering",
      "counts",
      "cash_report",
      "pm_report",
    ],
  },
  "unassigned": {
    "amPrep": false,
    "closing": true,
    "myShift": true,
    "safetyLine": true,
    "tiles": [],
  },
}
`;

exports[`dashboard rendered visibility by role > snapshots assigned and unassigned dashboards at level 9 1`] = `
{
  "assigned": {
    "amPrep": true,
    "closing": true,
    "myShift": true,
    "safetyLine": false,
    "tiles": [
      "opening_report",
      "mid_day_prep",
      "receiving",
      "ordering",
      "counts",
      "cash_report",
      "pm_report",
    ],
  },
  "unassigned": {
    "amPrep": false,
    "closing": true,
    "myShift": true,
    "safetyLine": true,
    "tiles": [],
  },
}
`;
